uncommented changes in workflow

--- a/.github/workflows/lambda-apigw-contact.yml
+++ b/.github/workflows/lambda-apigw-contact.yml
@@ -19,10 +19,10 @@ on:
           - destroy
 
 
-# permissions:
-#   id-token: write
-#   contents: write
-#   pull-requests: write
+permissions:
+  id-token: write
+  contents: write
+  pull-requests: write
 
 jobs:
   terraform:
